--- a/src/components/TestPage/index.module.css
+++ b/src/components/TestPage/index.module.css
@@ -22,3 +22,71 @@
 .renda {
 	min-width: 5.5em;
 }
+
+.testEntry {
+	display: flex;
+	align-items: center;
+	gap: var(--space-4);
+
+	@media screen and (max-width: 900px) {
+		display: grid;
+		gap: var(--space-2);
+		grid-template-columns: 0fr 0fr;
+		grid-template-rows: 0fr 0fr;
+		padding-bottom: var(--space-4);
+	}
+
+	@media screen and (max-width: 620px) {
+		display: flex;
+		gap: var(--space-2);
+		flex-direction: column;
+	}
+}
+
+.rendaCounters {
+	display: flex;
+	gap: var(--space-2);
+
+	@media screen and (max-width: 900px) {
+		grid-column: 1 / 3;
+		justify-self: center;
+	}
+}
+
+.hitCounters {
+	display: flex;
+	align-items: center;
+	gap: var(--space-2);
+
+	@media screen and (max-width: 620px) {
+		display: grid;
+		grid-template-columns: 0fr 0fr;
+		grid-template-rows: 0fr 0fr 0fr;
+
+		> *:nth-child(1) {
+			grid-column: 1 / 2;
+			grid-row: 1 / 2;
+		}
+
+		> *:nth-child(2) {
+			grid-column: 1 / 2;
+			grid-row: 2 / 3;
+		}
+
+		> *:nth-child(3) {
+			grid-column: 2 / 3;
+			grid-row: 2 / 3;
+		}
+
+		> *:nth-child(4) {
+			grid-column: 2 / 3;
+			grid-row: 1 / 2;
+		}
+
+		> *:nth-child(5) {
+			place-self: center;
+			grid-column: 1 / 3;
+			grid-row: 3 / 4;
+		}
+	}
+}
